--- a/Manual/HTML/B-Machine.html
+++ b/Manual/HTML/B-Machine.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -24,22 +24,29 @@
             <div class="page-content">
                 <img src="img/Component/B-Machine.svg" class="diagram">
                 <h2>On the Subject of the B-Machine</h2>
-                <p class="flavour-text">This looks like one of those modules where you exceucte a set of commands in a weird programming language, except this one is a knocko-<br>
-Well, the B-machine predates Brainf*** by 40 or so years, so I guess the other one is a knockoff. </p>
+                <p class="flavour-text">
+                    This looks like one of those modules where you exceucte a set of commands in a weird programming language, except this one is a knocko-<br>
+                    Well, the B-machine predates Brainf*** by 40 or so years, so I guess the other one is a knockoff.
+                </p>
 
                 <p>The module has a display and two buttons, one of which is marked and one is not.</p>
-                <p>Every 30 seconds, a command from Hao Wang's B-machine will be sent to the module, announced by a cowbell. This contues until half the bomb's time in minutes have passed. A guide to the B-machine's commands can be found below.</p>
+                <p>Every 30 seconds, a command from Hao Wang's B-machine will be sent to the module, announced by a cowbell. This continues until half the bomb's time in minutes have passed. A guide to the B-machine's commands can be found below.</p>
                 <p>After this happens, the module will be ready for input. Enter the state of the portion of the tape that has been visited using the buttons to solve the module. Entering an incorrect state will strike and clear your input.</p>
 
                 <h3>A Guide To The B-Machine</h3>
-                <p>The B-machine is a simple computational model created by Hao Wang. It uses an infinite tape made up of cells, which can be marked or unmarked, to store information and reads that information using a scanning head. Below are all the ommands it uses.</p><ul>
-                <li> →: Move the scanning head one cell to the right, then continue to the next instruction.</li>
-                <li> ←: Move the scanning head one cell to the left, then continue to the next instruction.</li>
-                <li> *: Mark the cell under the scanning head, then continue to the next instruction.</li>
-                <li> Cn: If the cell under the scanning head is marked, go to the Nth instruction. Otherwise, continue to the next instruction. Unlike in the actual B-machine, this jump can only be executed a maximum of five times.</li></ul>
+                <p>The B-machine is a simple computational model created by Hao Wang. It uses an infinite tape made up of cells, which can be marked or unmarked, to store information and reads that information using a scanning head. Below are all the commands it uses.</p><ul>
+                    <li> →: Move the scanning head one cell to the right, then continue to the next instruction.</li>
+                    <li> ←: Move the scanning head one cell to the left, then continue to the next instruction.</li>
+                    <li> *: Mark the cell under the scanning head, then continue to the next instruction.</li>
+                    <li> Cn: If the cell under the scanning head is marked, go to the Nth instruction. Otherwise, continue to the next instruction. Unlike in the actual B-machine, this jump can only be executed a maximum of five times.</li></ul>
+                <h3>Stage Recovery</h3>
+                <ul><li>After a strike, the module will ask you if you want to look at the commands again.</li>
+                <li>If you do, press the marked button. If you don't, press the unmarked button and continue submitting from the start.</li>
+                <li>While recovering, press the marked button to go to the next command and press the unmarked button to go back to the previous command</li>
+                <li>Going outside the bounds of the program will exit the stage recovery and resume input from the start.</li></ul>
             </div>
             <div class="page-footer relative-footer">Page 1 of 1</div>
         </div>
-        </div>
+    </div>
 </body>
 </html>
